Work on accesibility.

--- a/src/components/base-styles/init/visually-hidden/_visually-hidden.scss
+++ b/src/components/base-styles/init/visually-hidden/_visually-hidden.scss
@@ -42,3 +42,11 @@
     @include visually-hidden--off;
   }
 }
+
+.visually-hidden {
+  @include visually-hidden;
+
+  &--focusable {
+    @include visually-hidden--focusable;
+  }
+}
