Work on base layout and fonts WIP

--- a/src/components/base-styles/base/normalize.scss
+++ b/src/components/base-styles/base/normalize.scss
@@ -10,6 +10,7 @@
 
 
 // Normalize-scss is broken into modular pieces to make it easier to edit.
+@import './../init/init';
 @import 'root/root';
 @import 'html5';
 @import 'links/links';
