Adds open sans.

--- a/src/components/base-styles/init/_variables.scss
+++ b/src/components/base-styles/init/_variables.scss
@@ -77,6 +77,7 @@ $tahoma:          Tahoma, Verdana, 'DejaVu Sans', sans-serif;
 $helvetica:       Helvetica, Arial, 'Nimbus Sans L', sans-serif;
 $arial:           Arial, Helvetica, 'Nimbus Sans L', sans-serif;
 $impact:          Impact, 'Arial Narrow', Helvetica, sans-serif;
+$zilla-slab:      'Zilla Slab', 'Arial Narrow', Helvetica, sans-serif;
 
 // Monospace font stacks.
 // For an explanation of why "sans-serif" is at the end of this list, see
@@ -102,7 +103,7 @@ $typefaces: (
     style: italic,
   ),
   body: (
-    font-family: $helvetica,
+    font-family: $zilla-slab,
   ),
   pb-icon: (
     font-family: $pb-icon,
