change fotoer color

--- a/src/components/components/footer/footer.scss
+++ b/src/components/components/footer/footer.scss
@@ -3,7 +3,7 @@
 .footer {
   width: 100%;
   color: color('white');
-  background-image: linear-gradient(color('blue-dark'), color('blue-light'));
+  background-image: linear-gradient(color('blue-dark'), color('turquoise'));
 
   ul {
     list-style: none;
