--- a/src/components/components/shadow-box/shadow-box.scss
+++ b/src/components/components/shadow-box/shadow-box.scss
@@ -1,5 +1,11 @@
 @import './../../base-styles/init/init';
 
+// Shadow box component.
+// Adds styling to elements with shadow and white backgound.
 .shadow-box {
-  background: color(white);
+  background: color('white');
+  box-shadow: 0 1px 4px 0 color('black'); // Fallback.
+  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.25);
+  border-radius: 4px;
+  padding: 15px 20px;
 }
