--- a/src/components/layouts/layout-base/layout-base.scss
+++ b/src/components/layouts/layout-base/layout-base.scss
@@ -1,6 +1,8 @@
 @import "../../base-styles/init/init";
 
 .layout-base {
+  padding-top: 100px;
+  padding-bottom: 100px;
   margin: 0 auto;
   overflow-x: hidden;
   width: 100%;
