Work on text styles.

--- a/src/components/base-styles/init/_colors.scss
+++ b/src/components/base-styles/init/_colors.scss
@@ -51,8 +51,10 @@ $chroma: add-colors('functional', (
         light:                  'white',
         dark:                   'black',
 
-        text:                   'black',
+        text:                   'grey-dark',
         text-bg:                'off-white',
+
+        title:                  'brand',
 
         link:                   'light-navy',
         link-visited:           'light-navy',
