--- a/src/components/base-styles/base/headings/_headings.scss
+++ b/src/components/base-styles/base/headings/_headings.scss
@@ -8,18 +8,46 @@
 // Address variable `h1` font-size and margin within `section` and `article`
 // contexts in Firefox 4+, Safari, and Chrome.
 h1,
-%h1,
+%h1 {
+  @include typeface(title);
+  @include font-size(36px);
+  @include line-height(54px);
+  color: color('title');
+  font-weight: 600;
+  margin: 0;
+}
+
 h2,
-%h2,
+%h2 {
+  @include typeface(title);
+  @include font-size(20px);
+  @include line-height(30px);
+  color: color('title');
+  font-weight: 500;
+  margin: 0;
+}
+
 h3,
-%h3,
+%h3 {
+  @include typeface(title);
+  @include font-size(17px);
+  @include line-height(19px);
+  letter-spacing: 0.5px;
+  color: color('title');
+  font-weight: 500;
+  margin: 0;
+}
+
 h4,
 %h4,
 h5,
 %h5,
 h6,
 %h6 {
-  @include type-layout(m, 1);
+  @include typeface(title);
+  @include font-size($base-font-size);
+  @include line-height($base-line-height);
+  color: color('title');
+  font-weight: 500;
   margin: 0;
-  font-weight: normal;
 }
