--- a/src/components/base-styles/init/_variables.scss
+++ b/src/components/base-styles/init/_variables.scss
@@ -39,16 +39,16 @@ $base-font-size:    14px;
 // The base line height determines the basic unit of vertical rhythm.
 $base-line-height:  21px;
 
-// Deprecated in this theme.
-// The font sizes in our type hierarchy as tee shirt sizes.
-$font-size: (
-  xxl:              36px,
-  xl:               26px,
-  l:                21px,
-  m:                $base-font-size,
-  s:                15px,
-  xs:               13px
-);
+//// Deprecated in this theme.
+//// The font sizes in our type hierarchy as tee shirt sizes.
+//$font-size: (
+//  xxl:              36px,
+//  xl:               26px,
+//  l:                21px,
+//  m:                $base-font-size,
+//  s:                15px,
+//  xs:               13px
+//);
 
 // Typey allows you to alter font weights site-wide with this map.
 $font-weight: (
