--- a/src/components/base-styles/init/_colors.scss
+++ b/src/components/base-styles/init/_colors.scss
@@ -17,7 +17,7 @@ $chroma: define-default-color-scheme('branding', 'The site main colors. Can be u
 $chroma: add-colors((
         black:                  #000,
         grey-dark:              #262626,
-        'grey':                 #979797,
+        'grey':                 #4D4D4D,
         grey-light:             #ABABAB,
         grey-extra-light:       #D2D2D2,
 
@@ -134,6 +134,9 @@ $chroma: add-colors('functional', (
 
         footer-bg-dark:         'light-navy',
         footer-bg-light:        'blue-light',
+
+        navigation:             'grey',
+        navigation-hover:       'brand',
 ));
 
 $chroma-active-scheme: 'functional';
