Adds title to club and fixed user menu overlay.

--- a/src/components/components/header/header.scss
+++ b/src/components/components/header/header.scss
@@ -21,6 +21,7 @@
     &-inner {
       @extend %layout-base;
       @extend %layout-base--only-containment;
+      overflow: visible;
       display: flex;
     }
   }
