Add header button class.

--- a/src/components/components/header/header.scss
+++ b/src/components/components/header/header.scss
@@ -23,6 +23,7 @@
       @extend %layout-base--only-containment;
       overflow: visible;
       display: flex;
+      align-items: center;
     }
   }
 
