Theme small and no paddings components

--- a/src/components/components/shadow-box/shadow-box.scss
+++ b/src/components/components/shadow-box/shadow-box.scss
@@ -9,4 +9,13 @@
   box-shadow: 0 1px 4px 0 rgba(0,0,0,0.25);
   border-radius: 4px;
   padding: 15px 20px;
+
+  &--small-paddings {
+    padding: 10px;
+  }
+
+  &--no-paddings {
+    padding: 0;
+  }
+
 }
