Theme opportunities secondary title

--- a/src/components/base-styles/base/normalize.scss
+++ b/src/components/base-styles/base/normalize.scss
@@ -16,6 +16,7 @@
 @import 'links/links';
 @import 'headings/headings';
 @import 'text/text';
+@import 'highlighted-text/highlighted-text';
 @import 'grouping/grouping';
 @import 'embedded/embedded';
 @import 'forms/components/button/button';
