Theme teaser-box. Rename external resource component to teaser-box

--- a/src/components/base-styles/init/_colors.scss
+++ b/src/components/base-styles/init/_colors.scss
@@ -39,6 +39,9 @@ $chroma: add-colors((
 
         violet-blue:            #6806BD,
         violet:                 #9013FE,
+
+        // // TODO: replace that name
+        yetAnotherGrey:         #9b9b9b,
 ));
 
 // Define color names for functional uses.
