Adds zero padding shadow box variant.

--- a/src/components/components/shadow-box/shadow-box.scss
+++ b/src/components/components/shadow-box/shadow-box.scss
@@ -11,6 +11,10 @@
   padding: 15px 20px;
 
   &--zero-radius {
-    border-radius: 0px;
+    border-radius: 0;
+  }
+
+  &--zero-padding {
+    padding: 0;
   }
 }
