Update the not member opportunities. References #62. References #73

--- a/src/components/components/teaser-box/teaser-box.scss
+++ b/src/components/components/teaser-box/teaser-box.scss
@@ -58,6 +58,28 @@
     &__list {
       margin-top: 25px;
     }
-
   }
+
+  &__dummy-row {
+    width: 95%;
+    height: 10px;
+    background: red;
+    display: block;
+    border-radius: 4px;
+    background-color: #f5f7f0;
+
+    &--small {
+      margin-top: 10px;
+      margin-bottom: 40px;
+      width: 65%;
+    }
+  }
+
+  &__list-wrapper--dummy {
+
+    .teaser-box__inner {
+      flex-wrap: wrap;
+    }
+  }
+
 }
