--- a/src/components/layouts/layout-contained/layout-contained.scss
+++ b/src/components/layouts/layout-contained/layout-contained.scss
@@ -1,3 +1,5 @@
+@import "../../base-styles/init/init";
+
 // Basic layout component.
 // Add containment and paddings from the sides of the page.
 //
@@ -7,9 +9,7 @@
 // .laytout-contained - Resets the top and bottom paddings.
 
 %layout-contained,
-.laytout-contained {
-  padding-top: 100px;
-  padding-bottom: 100px;
+.layout-contained {
   margin: 0 auto;
   overflow-x: hidden;
   width: 100%;
