Fix text color at teaser-box text. References #54

--- a/src/components/components/teaser-box/teaser-box.scss
+++ b/src/components/components/teaser-box/teaser-box.scss
@@ -23,10 +23,12 @@
 
   }
 
+  a,
   &__text {
     display: flex;
     padding: 10px 20px 10px 15px;
     flex-direction: column;
+    color: color('grey-dark');
   }
 
   &__title {
