Fix external-link color. References #56 & #55

--- a/src/components/components/external-link-box/external-link-box.scss
+++ b/src/components/components/external-link-box/external-link-box.scss
@@ -43,7 +43,7 @@
   }
 
   &__title {
-
+    color: color('grey-dark');
   }
 
   &__date {
@@ -60,9 +60,11 @@
     margin-top: 35px;
   }
 
+
   &__url {
     @include font-size(10px);
     @include line-height(11px);
     display: block;
+    color: color('grey-another');
   }
 }
